[gd_scene load_steps=6 format=2]

[ext_resource path="res://players/player_01/uno.png" type="Texture" id=1]
[ext_resource path="res://players/player_03/tres.png" type="Texture" id=2]
[ext_resource path="res://players/player_02/dos.png" type="Texture" id=3]
[ext_resource path="res://menu/tema_menu.tres" type="Theme" id=4]
[ext_resource path="res://menu selecion personaje/MenuSeleccion.gd" type="Script" id=5]

[node name="MenuSeleccion" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 0.47451, 0.560784, 0.572549, 1 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -211.5
margin_right = 211.5
margin_bottom = 72.0
theme = ExtResource( 4 )
text = "Seleccionar player 1"

[node name="Btn_p1" type="TextureButton" parent="."]
margin_left = 89.0
margin_top = 187.0
margin_right = 312.0
margin_bottom = 410.0
texture_normal = ExtResource( 1 )
expand = true

[node name="Btn_p3" type="TextureButton" parent="."]
margin_left = 403.0
margin_top = 185.0
margin_right = 626.0
margin_bottom = 408.0
texture_normal = ExtResource( 2 )
expand = true

[node name="Btn_p2" type="TextureButton" parent="."]
margin_left = 726.0
margin_top = 186.0
margin_right = 949.0
margin_bottom = 409.0
texture_normal = ExtResource( 3 )
expand = true

[connection signal="pressed" from="Btn_p1" to="." method="_on_Btn_p1_pressed"]
[connection signal="pressed" from="Btn_p3" to="." method="_on_Btn_p3_pressed"]
[connection signal="pressed" from="Btn_p2" to="." method="_on_Btn_p2_pressed"]
